--- a/style.css
+++ b/style.css
@@ -112,3 +112,23 @@ body{
 .container-text-left span{
     color: #A8A8A8;
 }
+
+.swiper {
+    overflow: hidden;
+  }
+
+  .swiper-slide {
+    display: flex;
+    background: #000000;
+    color: white;
+    font-size: 28px;
+  }
+  .swiper-slide h1{
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 4rem;
+  }
+  .swiper-wrapper {
+    transition-timing-function: linear !important;
+  }
